# lab_load_balancer_with_haproxy

./: .env  Cargo.toml  README.md  docker-compose.yml  haproxy.cfg
server_1/: Cargo.toml
server_1/src/: handler.rs  main.rs
server_2/: Cargo.toml
server_2/src/: handler.rs  main.rs
src/: main.rs
